tests/error/array_oob.gw
#! [contains] ArrayOutofBounds
var Object i[1];
i[1];
